--- a/web/tables.html
+++ b/web/tables.html
@@ -24,7 +24,9 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <img src="images/imagen.jpg" alt="logo" style="width:50px;">
-    <a class="navbar-brand" href="#">Autobuses el Poblado Laureles S.A</a>
+    <a class="navbar-brand" href="#">A
+        
+        utobuses el Poblado Laureles S.A</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
